@@ -2,7 +2,7 @@
 # vim: noet ts=2 sts=8 sw=2
 
 require 'rubygems'
-gem 'rdoc', '>= 2.4' unless defined? $rdoc_rakefile
+gem 'rdoc', '>= 2.4' unless ENV['RDOC_TEST'] or defined?($rdoc_rakefile)
 
 require 'pp'
 require 'pathname'
@@ -10,8 +10,6 @@ require 'fileutils'
 require 'erb'
 require 'yaml'
 
-require 'rdoc/rdoc'
-require 'rdoc/generator'
 require 'rdoc/generator/markup'
 
 $DARKFISH_DRYRUN = false # TODO make me non-global
