@@ -373,6 +373,8 @@ class RDoc::Markup
 
 end
 
+require 'rdoc/markup/attribute_manager'
 require 'rdoc/markup/fragments'
 require 'rdoc/markup/inline'
 require 'rdoc/markup/lines'
+
