@@ -1,5 +1,3 @@
-require 'rdoc/parser'
-
 ##
 # Parse a non-source file. We basically take the whole thing as one big
 # comment. If the first character in the file is '#', we strip leading pound
